fixed dropdown-item left spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,10 @@ a {
   transform: scale(1.1);
 }
 
+.dropdown-item{
+  padding: .25rem 0;
+}
+
 .dropdown-item:hover + .deleteList, .deleteList:hover {
   display: inline-block;
 }
